# ShroonLogger

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
cmake/: ShroonLoggerConfig.cmake  ShroonLoggerTargets.cmake
example/: main.c
include/Shroon/Logger/: Logger.h
